--- a/frontend/frontend_to-do/package.json
+++ b/frontend/frontend_to-do/package.json
@@ -15,7 +15,10 @@
     "@fontsource/roboto": "^5.2.5",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
+    "@mui/x-data-grid": "^7.28.1",
+    "@mui/x-date-pickers": "^7.28.0",
     "axios": "^1.8.4",
+    "dayjs": "^1.11.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0"
