--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          if [ -f ./backend_to-do/ToDo/requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Set environment variable for testing
         run: echo "DJANGO_TEST_ENV=True" >> $GITHUB_ENV
 
