--- a/frontend/frontend_to-do/vercel.json
+++ b/frontend/frontend_to-do/vercel.json
@@ -1,8 +1,12 @@
 {
   "builds": [
-    { "src": "vite.config.js", "use": "@vercel/static-build" }
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build"
+    }
   ],
   "routes": [
     { "src": "/(.*)", "dest": "/index.html" }
-  ]
+  ],
+  "outputDirectory": "dist"
 }
