--- a/frontend/frontend_to-do/vercel.json
+++ b/frontend/frontend_to-do/vercel.json
@@ -8,5 +8,8 @@
   "routes": [
     { "src": "/(.*)", "dest": "/index.html" }
   ],
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ],
   "outputDirectory": "dist"
 }
